<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handler"
            type="org.js.denisvieira.teste.application.modules.selectservice.SelectServiceContract.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@color/colorPrimary"
            android:onClick="@{handler::showAddAvailabilityDialog}"
            android:padding="30dp"
            android:text="@string/main_form_add_availability"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@color/colorPrimary"
            android:onClick="@{handler::showAddAppointmentDialog}"
            android:padding="30dp"
            android:text="@string/main_form_add_appointment"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:onClick="@{handler::showAddAbsenceDialog}"
            android:padding="30dp"
            android:text="@string/main_form_absence"
            android:textColor="@android:color/white" />


    </LinearLayout>

</layout>