<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="org.js.denisvieira.teste.application.components.addabsencedialog.AddAbsenceDialog" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/mainform_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:text="@string/main_form_absence"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/add_availability_dialog_divider_view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainform_title_text_view" />

        <RadioGroup
            android:id="@+id/add_absence_dialog_alternatives_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:checkedButton="@id/from_now_on"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/add_availability_dialog_divider_view">

            <RadioButton
                android:id="@+id/from_now_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/add_absence_dialog_from_now_on_alternative" />

            <RadioButton
                android:id="@+id/to_define"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_absence_dialog_to_define_alternative" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/add_absence_dialog_to_define_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/add_absence_dialog_alternatives_radio_group"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/main_form_day_field"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/mainform_day_from_field_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_appointment_dialog_patient_field_container_linear_layout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:text="@string/common_from"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{handler::showSelectDayFromPicker}"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/add_absence_dialog_select_day_from_value_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/common_select_day_hint" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/grey" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/mainform_day_at_field_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:text="@string/common_at"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{handler::showSelectDayAtPicker}"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/add_absence_dialog_select_day_at_value_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/common_select_day_hint" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/grey" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/main_form_hour_field"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/mainform_hour_from_field_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:text="@string/common_from"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{handler::showSelectHourFromPicker}"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/add_absence_dialog_select_hour_from_value_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/common_select_time_hint" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/grey" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainform_hour_at_field_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:text="@string/common_at"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{handler::showSelectHourAtPicker}"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/add_absence_dialog_select_hour_at_value_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/common_select_time_hint" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/grey" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_absence_dialog_submit_button"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:onClick="@{handler::onPressSubmitButton}"
            android:text="@string/add_availability_dialog_send"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_absence_dialog_to_define_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>